[XForms] Problem updating UI with external instances. Bug 332211, r=allan+olli